# Django-Chatapp

./: .gitignore  README.md  db.sqlite3  pyproject.toml
chatapp/: consumers.py  forms.py  models.py  routing.py  views.py
chatapp/migrations/: 0001_initial.py  0002_chatgroup_users_online.py
chatapp/templates/chatapp/: chat_message.html  chat_view.html
chatapp/templates/chatapp/partials/: chat_message_p.html  online_count.html
core/: asgi.py  settings.py  urls.py
static/css/: style.css  tailwind.css
staticfiles/css/: style.css  style.min.css
templates/: base.html  home.html
templates/allauth/layouts/: base.html
templates/includes/: header.html  messages.html
templates/layouts/: blank.html
user/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/templates/users/: profile_edit.html
