[tool.poetry]
package-mode = false

[project]
name = "django_starter"
version = "0.1.0"
description = "django boilerplate code"
authors = [
    {name = "GAUTAM JHALARIA",email = "jhalariagautam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "django-htmx (>=1.23.0,<2.0.0)",
    "django-allauth (>=65.9.0,<66.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
