[tool.poetry]
package-mode = false

[project]
name = "django_starter"
version = "0.1.0"
description = "django boilerplate code"
authors = [
    {name = "GAUTAM JHALARIA",email = "jhalariagautam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "django-htmx (>=1.23.0,<2.0.0)",
    "django-allauth (>=65.9.0,<66.0.0)",
    "channels[daphne] (>=4.2.2,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-cloudinary-storage (>=0.3.0,<0.4.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
